[tool.poetry]
name = "stability-image-generation"
version = "0.1.0"
description = "Image generation using stability AI"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
